[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Levels/LushingFields/Level1/Level1_1_1_parallel.gd" type="Script" id=1]
[ext_resource path="res://Objects/Characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/AutumnForest.tres" type="TileSet" id=3]
[ext_resource path="res://Objects/Interactables/Portal.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 524.446, 43.2911 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 458.539, 227.566 )

[node name="MainTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -2, 19, 0, -1, 19, 0, -65511, 3, 0, -65510, 20, 0, -65507, 18, 0, -65506, 19, 0, -65505, 19, 0, -65504, 19, 0, 65534, 19, 0, 65535, 19, 0, 25, 3, 0, 26, 20, 0, 29, 18, 0, 30, 19, 0, 31, 19, 0, 32, 19, 0, 131070, 19, 0, 131071, 19, 0, 65561, 3, 0, 65562, 20, 0, 65565, 18, 0, 65566, 19, 0, 65567, 19, 0, 65568, 19, 0, 196606, 19, 0, 196607, 19, 0, 131097, 3, 0, 131098, 20, 0, 131101, 18, 0, 131102, 19, 0, 131103, 19, 0, 131104, 19, 0, 262142, 19, 0, 262143, 19, 0, 196633, 3, 0, 196634, 20, 0, 196637, 21, 0, 196638, 22, 0, 196639, 22, 0, 196640, 19, 0, 327678, 19, 0, 327679, 19, 0, 262169, 3, 0, 262170, 20, 0, 262175, 19, 0, 262176, 19, 0, 393214, 19, 0, 393215, 19, 0, 327705, 3, 0, 327706, 20, 0, 327711, 19, 0, 327712, 19, 0, 458750, 19, 0, 458751, 19, 0, 393241, 3, 0, 393242, 20, 0, 393243, 107, 0, 393244, 106, 0, 393247, 19, 0, 393248, 19, 0, 524286, 19, 0, 524287, 19, 0, 458756, 39, 0, 458757, 40, 0, 458758, 41, 0, 458764, 55, 0, 458765, 59, 0, 458777, 3, 0, 458778, 10, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 19, 0, 458784, 19, 0, 589822, 19, 0, 589823, 19, 0, 524290, 59, 0, 524292, 42, 0, 524293, 43, 0, 524294, 49, 0, 524295, 40, 0, 524296, 40, 0, 524297, 41, 0, 524299, 0, 0, 524300, 1, 0, 524301, 1, 0, 524302, 2, 0, 524313, 3, 0, 524314, 11, 0, 524315, 22, 0, 524316, 22, 0, 524317, 22, 0, 524318, 22, 0, 655358, 19, 0, 655359, 1, 0, 589825, 0, 0, 589826, 1, 0, 589827, 2, 0, 589828, 45, 0, 589829, 51, 0, 589830, 43, 0, 589831, 43, 0, 589832, 43, 0, 589833, 44, 0, 589835, 24, 0, 589836, 4, 0, 589837, 4, 0, 589838, 5, 0, 589849, 3, 0, 589850, 14, 0, 720895, 19, 0, 655361, 24, 0, 655362, 19, 0, 655363, 5, 0, 655365, 45, 0, 655366, 38, 0, 655367, 36, 0, 655368, 37, 0, 655369, 47, 0, 655371, 18, 0, 655372, 25, 0, 655373, 4, 0, 655374, 5, 0, 655379, 106, 0, 655385, 3, 0, 655386, 5, 0, 786431, 19, 0, 720897, 21, 0, 720898, 9, 0, 720899, 5, 0, 720902, 33, 0, 720903, 31, 0, 720904, 34, 0, 720907, 18, 0, 720908, 19, 0, 720909, 4, 0, 720910, 10, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 2, 0, 720921, 3, 0, 720922, 5, 0, 851967, 19, 0, 786434, 12, 0, 786435, 5, 0, 786439, 30, 0, 786443, 18, 0, 786444, 19, 0, 786445, 4, 0, 786446, 25, 0, 786447, 25, 0, 786448, 19, 0, 786449, 19, 0, 786450, 19, 0, 786451, 19, 0, 786452, 5, 0, 786457, 24, 0, 786458, 10, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 917503, 19, 0, 851970, 6, 0, 851971, 8, 0, 851975, 30, 0, 851979, 18, 0, 851980, 19, 0, 851981, 4, 0, 851982, 19, 0, 851983, 19, 0, 851984, 19, 0, 851985, 25, 0, 851986, 25, 0, 851987, 19, 0, 851988, 5, 0, 851993, 18, 0, 851994, 25, 0, 851995, 19, 0, 851996, 19, 0, 851997, 19, 0, 851998, 19, 0, 851999, 19, 0, 983039, 19, 0, 917504, 2, 0, 917511, 30, 0, 917515, 18, 0, 917516, 19, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 25, 0, 917522, 19, 0, 917523, 25, 0, 917524, 5, 0, 917529, 18, 0, 917530, 25, 0, 917531, 25, 0, 917532, 19, 0, 917533, 19, 0, 917534, 19, 0, 917535, 19, 0, 1048575, 19, 0, 983040, 26, 0, 983043, 59, 0, 983044, 58, 0, 983047, 30, 0, 983049, 55, 0, 983051, 18, 0, 983052, 19, 0, 983053, 4, 0, 983054, 4, 0, 983055, 4, 0, 983056, 4, 0, 983057, 25, 0, 983058, 19, 0, 983059, 19, 0, 983060, 5, 0, 983065, 18, 0, 983066, 25, 0, 983067, 25, 0, 983068, 25, 0, 983069, 25, 0, 983070, 19, 0, 983071, 19, 0, 1114111, 19, 0, 1048576, 10, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 2, 0, 1048583, 30, 0, 1048584, 0, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 13, 0, 1048588, 19, 0, 1048589, 25, 0, 1048590, 19, 0, 1048591, 19, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 5, 0, 1048601, 18, 0, 1048602, 19, 0, 1048603, 19, 0, 1048604, 25, 0, 1048605, 25, 0, 1048606, 25, 0, 1048607, 19, 0, 1179647, 19, 0, 1114112, 19, 0, 1114113, 19, 0, 1114114, 19, 0, 1114115, 19, 0, 1114116, 19, 0, 1114117, 19, 0, 1114118, 19, 0, 1114119, 30, 0, 1114120, 19, 0, 1114121, 19, 0, 1114122, 19, 0, 1114123, 18, 0, 1114124, 19, 0, 1114125, 19, 0, 1114126, 19, 0, 1114127, 25, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 5, 0, 1114137, 18, 0, 1114138, 19, 0, 1114139, 19, 0, 1114140, 25, 0, 1114141, 25, 0, 1114142, 25, 0, 1114143, 19, 0, 1245183, 19, 0, 1179648, 19, 0, 1179649, 19, 0, 1179650, 19, 0, 1179651, 19, 0, 1179652, 19, 0, 1179653, 19, 0, 1179654, 19, 0, 1179655, 30, 0, 1179656, 19, 0, 1179657, 19, 0, 1179658, 19, 0, 1179659, 18, 0, 1179660, 25, 0, 1179661, 25, 0, 1179662, 25, 0, 1179663, 25, 0, 1179664, 25, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 25, 0, 1179668, 5, 0, 1179673, 18, 0, 1179674, 19, 0, 1179675, 19, 0, 1179676, 19, 0, 1179677, 25, 0, 1179678, 25, 0, 1179679, 19, 0, 1245191, 30, 0 )

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2( 104.435, 641.447 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 386, -10 )
shape = SubResource( 1 )

[node name="Portal" parent="." instance=ExtResource( 4 )]
position = Vector2( 375.316, 224.138 )
[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
[connection signal="body_exited" from="Portal" to="." method="_on_Portal_body_exited"]
